Added new save and send to bibliography user button on editPublication page
- added bean property for ForFriendTag
- added additional checks at ForFriendTag handling
- added new messages
- added new send JS method
- adapted CSS for button toolbars

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2093,7 +2093,8 @@ restore = restore
 
 save = save
 
-save.and.rate = save and rate
+save.and.rate    = save and rate
+save.and.send_to = save and send to {0}
 
 scraper_info.all_sites                = This is a list of all supported sites
 scraper_info.all_sites_header         = all suported sites
