--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2078,7 +2078,8 @@ restore = wiederherstellen
 
 save = Speichern
 
-save.and.rate = Speichern & Bewerten
+save.and.rate    = Speichern & Bewerten
+save.and.send_to = Speichern & Senden an {0}
 
 scraper_info.all_sites                = Eine Liste aller unterst\u00FCtzen Kataloge
 scraper_info.all_sites_header         = Alle unterst\u00FCtzten Seiten
