--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -571,7 +571,6 @@ error.captcha                                = Could not validate captcha due to
 error.concept_page_without_conceptname       = Sorry, this page does not exist on our server. I your want to access a concept page, please specify a concept name like /concept/tag/CONCEPT or /concept/user/USERNAME/CONCEPTNAME
 error.cookies_required                       = Please enable cookies in your browser.
 error.cv.missing_user_group                  = User/Group is missing.
-error.disambiguation.without_index           = 
 error.document_invalid_symbols               = Filename must not contain &lt;,/,\\ or &gt;
 error.document_not_converted                 = Sorry, the QR-Code could not be embedded into the requested document.
 error.document_not_found                     = Sorry, the requested document could not be found.
@@ -1062,7 +1061,6 @@ login.lostPassword            = lost password
 login.lostPassword_1          = I've lost my password.
 login.lostPassword_2          = Please send me a new one.
 login.method                  = Login method
-login.method.httpbasic        = 
 login.method.internal         = Local
 login.method.ldap             = LDAP
 login.method.openid           = OpenID
@@ -1428,7 +1426,7 @@ person.show.newThesisButton                       = New thesis
 person.show.noNamesFound                          = No names found
 person.show.noResourcesFound                      = No resources found
 person.show.orcidId                               = OrcidID
-person.show.other                                 = Other
+person.show.other                                 = Persons that might be the same
 person.show.otherPub                              = Other Publications
 person.show.otherPubOfSimilarAuthor               = Other Publications of same named Authors
 person.show.otherReviewer                         = Other reviewer
@@ -1441,12 +1439,12 @@ person.show.resourcesPanelHeader                  = Resources
 person.show.role                                  = Role
 person.show.rolePubTab                            = Related Theses
 person.show.saveButton                            = Update
+person.show.similarPersonMatchList                = Other persons that might be the same
 person.show.supervisor                            = Supervisor
 person.show.thatsMeButton                         = That's me
 person.show.thatsMeLabel                          = User
 person.show.thatsNotMeButton                      = That's not me
 person.show.thesis                                = Theses
-person.sidebar                                    = 
 person.sidebar.linkedUserClaimText                = If you are this person you can claim this page. Please consider that you can only claim one person. 
 person.sidebar.linkedUserClaimedText              = This person has been claimed by a user. 
 person.sidebar.linkedUserDefaultInfoText          = Is that you? Logg in to claim this person. 
@@ -2554,7 +2552,7 @@ time.a_year    = a year
 time.an_hour   = an hour
 time.justnow   = just now
 time.postfix   = \ ago
-time.prefix    = 
+time.prefix    = befor
 time.x_days    = {0} days
 time.x_hours   = {0} hours
 time.x_minutes = {0} minutes
