added text for person_merge content to message files

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1339,6 +1339,10 @@ person.index.header                               = Personensuche
 person.index.info                                 = infotext
 person.index.placeholder                          = Hier Personennamen (Doktorand_in, Betreuer_in, etc.) oder Titelstichwort eingeben
 person.index.searchInfo                           = Suchen Sie nach einer Thesis durch eine Kombination aus Autor (Vor- / Nachname), Titel der Arbeit, Universit\u00E4t und Erscheinungsjahr
+person.merge.conflictmerge                        = accept merge and resolve conflicts
+person.merge.denie                                = denie merge
+person.merge.merge                                = accept merge
+person.merge.reasons                              = Reasons for this match
 person.new.formFirstName                          = Vorname
 person.new.formInfo                               = Bei Unsicherheit \u00FCber den Namen, alles in das Nachname-Feld eintragen
 person.new.formLastName                           = Nachname
