--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1352,6 +1352,10 @@ person.index.header                               = Search Dissertation Authors
 person.index.info                                 = infotext
 person.index.placeholder                          = Enter Person Name (Author, Advisor etc.) or Title 
 person.index.searchInfo                           = search for a thesis by a combination of author (first- / surname), title of thesis, university and year of publication
+person.merge.conflictmerge                        = accept merge and resolve conflicts
+person.merge.denie                                = denie merge
+person.merge.merge                                = accept merge
+person.merge.reasons                              = Reasons for this match
 person.new.formFirstName                          = First name
 person.new.formInfo                               = In case of unsureness, insert everything in last name
 person.new.formLastName                           = Last name
