PersonDatabaseManager handles merge as transaction

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1353,7 +1353,7 @@ person.index.info                                 = infotext
 person.index.placeholder                          = Enter Person Name (Author, Advisor etc.) or Title 
 person.index.searchInfo                           = search for a thesis by a combination of author (first- / surname), title of thesis, university and year of publication
 person.merge.conflictmerge                        = accept merge and resolve conflicts
-person.merge.denie                                = denie merge
+person.merge.deny                                 = deny merge
 person.merge.merge                                = accept merge
 person.merge.reasons                              = Reasons for this match
 person.new.formFirstName                          = First name
