--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2266,6 +2266,11 @@ settings.jabRef.explain                                     = F\u00FCr weiterf\u
 settings.jabRef.item                                        = item.layout
 settings.jabRef.item.help                                   = Wird ben\u00F6tigt, um jede Publikation zu \u00FCbersetzen
 settings.jabRef.layoutfile                                  = JabRef Layout-Datei
+settings.csl.layoutfile = CSL Layout-Datei
+settings.csl.explain = F\u00FCr weiterf\u00FChrende Erl\u00E4uterungen zur Erzeugung von Layoutfiltern, schauen Sie bitte auf die <a href="http://docs.citationstyles.org/en/stable/primer.html">CSL Seite</a>. Ausschlie\u00DFlich k\u00F6nnen Sie Ihre Layouts f\u00FCr die Veranschaulichung Ihrer Publikationsliste verwenden. Nachdem Sie die korrekten Dateien hochgeladen haben, finden Sie Ihr Layout unter Ihrer {0} Seite.
+settings.csl.item.help = Wird ben\u00F6tigt, um jede Publikation zu \u00FChbersetzen
+settings.csl.button = Abschicken
+settings.csl.filecontent = Hochgeladene Datei
 settings.layout                                             = Layout
 settings.layout.help.bootstrap                              = {0}: Das neue Layout l\u00E4sst sich einfacher und intuitiver bedienen.
 settings.layout.help.classic                                = {0}: Nutzen Sie diese Option f\u00FCr das alte BibSonomy 2 layout.
