--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2280,7 +2280,7 @@ settings.jabRef.item                                        = item.layout
 settings.jabRef.item.help                                   = used to render each publication post
 settings.jabRef.layoutfile                                  = JabRef layout file
 settings.csl.layoutfile = CSL layout file
-settings.csl.explain = For an explanation on how to write such export filters, have a look at the the <a href="http://docs.citationstyles.org/en/stable/primer.html">the CSL page</a> page. You (and only you!) can use these layouts to show your publication lists in a format of your choice. After uploading the correct file(s) have a look at my {0} to see how it looks.
+settings.csl.explain = For an explanation on how to write such export filters, have a look at the the <a href="http://docs.citationstyles.org/en/stable/primer.html">the CSL page</a> page. You (and only you!) can use these layouts to show your publication lists in a format of your choice.
 settings.csl.item.help = used to render each publication post
 settings.csl.button = upload
 settings.csl.filecontent = uploaded file
