--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2267,8 +2267,8 @@ settings.jabRef.item                                        = item.layout
 settings.jabRef.item.help                                   = Wird ben\u00F6tigt, um jede Publikation zu \u00FCbersetzen
 settings.jabRef.layoutfile                                  = JabRef Layout-Datei
 settings.csl.layoutfile = CSL Layout-Datei
-settings.csl.explain = F\u00FCr weiterf\u00FChrende Erl\u00E4uterungen zur Erzeugung von Layoutfiltern, schauen Sie bitte auf die <a href="http://docs.citationstyles.org/en/stable/primer.html">CSL Seite</a>. Ausschlie\u00DFlich k\u00F6nnen Sie Ihre Layouts f\u00FCr die Veranschaulichung Ihrer Publikationsliste verwenden. Nachdem Sie die korrekten Dateien hochgeladen haben, finden Sie Ihr Layout unter Ihrer {0} Seite.
-settings.csl.item.help = Wird ben\u00F6tigt, um jede Publikation zu \u00FChbersetzen
+settings.csl.explain = F\u00FCr weiterf\u00FChrende Erl\u00E4uterungen zur Erzeugung von Layoutfiltern, schauen Sie bitte auf die <a href="http://docs.citationstyles.org/en/stable/primer.html">CSL Seite</a>. Ausschlie\u00DFlich k\u00F6nnen Sie Ihre Layouts f\u00FCr die Veranschaulichung Ihrer Publikationsliste verwenden.
+settings.csl.item.help = Wird ben\u00F6tigt, um jede Publikation zu \u00FCbersetzen
 settings.csl.button = Abschicken
 settings.csl.filecontent = Hochgeladene Datei
 settings.layout                                             = Layout
