--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2138,6 +2138,11 @@ settings.confirm                                            = confirmation befor
 settings.confirm.help                                       = ask for confirmation before deleting something e. g. a post
 settings.confirmpassword                                    = confirm new password
 settings.contact                                            = contact
+settings.csl.button                                         = upload
+settings.csl.explain                                        = For an explanation on how to write such export filters, have a look at the the <a href="http://docs.citationstyles.org/en/stable/primer.html">the CSL page</a> page. You (and only you!) can use these layouts to show your publication lists in a format of your choice. After uploading the correct file(s) have a look at my {0} to see how it looks.
+settings.csl.filecontent                                    = uploaded file
+settings.csl.item.help                                      = used to render each publication post
+settings.csl.layoutfile                                     = CSL layout file
 settings.currentpassword                                    = current password
 settings.delete                                             = delete
 settings.deleteaccount                                      = delete account
@@ -2279,11 +2284,6 @@ settings.jabRef.explain                                     = For an explanation
 settings.jabRef.item                                        = item.layout
 settings.jabRef.item.help                                   = used to render each publication post
 settings.jabRef.layoutfile                                  = JabRef layout file
-settings.csl.layoutfile = CSL layout file
-settings.csl.explain = For an explanation on how to write such export filters, have a look at the the <a href="http://docs.citationstyles.org/en/stable/primer.html">the CSL page</a> page. You (and only you!) can use these layouts to show your publication lists in a format of your choice.
-settings.csl.item.help = used to render each publication post
-settings.csl.button = upload
-settings.csl.filecontent = uploaded file
 settings.layout                                             = layout
 settings.layout.help.bootstrap                              = {0}: The new layout offers a more intuitive handling.
 settings.layout.help.classic                                = {0}: Use this for the old BibSonomy 2 layout.
