friends dropdown now working in view

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1744,6 +1744,8 @@ post.resource.go                                        = Go!
 post.resource.groups                                    = visibility settings
 post.resource.groups.describe                           = post visibility
 post.resource.groups.options                            = group options
+post.resource.groupsandfriends                          = Send to friends or groups
+post.resource.groupsandfriends.send                     = Send to
 post.resource.hint                                      = Posting could be so easy: just <strong>drag and drop</strong> our <a href="/buttons">buttons</a> to your bookmark toolbar.
 post.resource.hint1                                     = Find further information about these buttons or about our browser add-ons on the <a href="/buttons">buttons page</a>.
 post.resource.howpublished                              = howpublished
