fixed INgentaconnext scraper

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IngentaconnectScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IngentaconnectScraperUnitURLTest1.bib
@@ -1,10 +1,18 @@
-@article{Li:13November2009:0001-253X:605,
-	title = "ArticleRank: a PageRank-based alternative to numbers of citations for analysing citation networks",
-	journal = "Aslib Proceedings: new information perspectives",
-	volume = "61",
-	year = "13 November 2009",
-	abstract = "BPurpose/B - The purpose of this paper is to suggest an alternative to the widely used Times Cited criterion for analysing citation networks. The approach involves taking account of the natures of the papers that cite a given paper, so as to differentiate between papers that attract the same number of citations. BDesign/methodology/approach/B - ArticleRank is an algorithm that has been derived from Google's PageRank algorithm to measure the influence of journal articles. ArticleRank is applied to two datasets - a citation network based on an early paper on webometrics, and a self-citation network based on the 19 most cited papers in the ITJournal of Documentation/IT - using citation data taken from the Web of Knowledge database. BFindings/B - ArticleRank values provide a different ranking of a set of papers from that provided by the corresponding Times Cited values, and overcomes the inability of the latter to differentiate between papers with the same numbers of citations. The difference in rankings between Times Cited and ArticleRank is greatest for the most heavily cited articles in a dataset. BOriginality/value/B - This is a novel application of the PageRank algorithm.",
-	pages = "605-618(14)",
-	url = "http://www.ingentaconnect.com/content/mcb/ap/2009/00000061/00000006/art00005",
-	doi = "10.1108/00012530911005544",
-author = "Li, Jiang and Willett, Peter"}
+@article {Li:2009:0001-253X:605,
+title = "ArticleRank: a PageRank-based alternative to numbers of citations for analysing citation networks",
+journal = "Aslib Proceedings: new information perspectives",
+parent_itemid = "infobike://mcb/ap",
+publishercode ="mcb",
+year = "2009",
+volume = "61",
+number = "6",
+publicationdate ="2009-11-13T00:00:00",
+pages = "605-618",
+itemtype = "ARTICLE",
+issn = "0001-253X",
+url = "https://www.ingentaconnect.com/content/mcb/ap/2009/00000061/00000006/art00005",
+doi = "10.1108/00012530911005544",
+keyword = "Reference services, Bibliographies",
+author = "Li, Jiang and Willett, Peter",
+abstract = "Purpose The purpose of this paper is to suggest an alternative to the widely used Times Cited criterion for analysing citation networks. The approach involves taking account of the natures of the papers that cite a given paper, so as to differentiate between papers that attract the same number of citations. Design/methodology/approach ArticleRank is an algorithm that has been derived from Google's PageRank algorithm to measure the influence of journal articles. ArticleRank is applied to two datasets a citation network based on an early paper on webometrics, and a self-citation network based on the 19 most cited papers in the Journal of Documentation using citation data taken from the Web of Knowledge database. Findings ArticleRank values provide a different ranking of a set of papers from that provided by the corresponding Times Cited values, and overcomes the inability of the latter to differentiate between papers with the same numbers of citations. The difference in rankings between Times Cited and ArticleRank is greatest for the most heavily cited articles in a dataset. Originality/value This is a novel application of the PageRank algorithm.",
+}
