--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SSRNScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SSRNScraperUnitURLTest1.bib
@@ -1,7 +1,7 @@
 @article{ni2004stock,
  type={Working Paper Series},
  title={{Stock Price Clustering on Option Expiration Dates}},
- author={Ni, Sophie X. and Pearson, Neil D. and Poteshman, Allen M. },
+ author={Ni, Sophie Xiaoyan and Pearson, Neil D. and Poteshman, Allen M. },
  journal={SSRN eLibrary},
  year={2004},
  publisher={SSRN},
