fixed LiebertScraper (and removed non-functional cited-by extraction code)

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/LiebertScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/LiebertScraperUnitURLTest1.bib
@@ -15,13 +15,13 @@ doi = {10.1089/152308604773934350},
     note ={PMID: 15130286},
 
 URL = { 
-        http://dx.doi.org/10.1089/152308604773934350
+        https://doi.org/10.1089/152308604773934350
     
 },
 eprint = { 
-        http://dx.doi.org/10.1089/152308604773934350
+        https://doi.org/10.1089/152308604773934350
     
 }
 
-,abstract = { <p class="first last">A new technique is described for simultaneous determination of intra- and extracellular oxygen concentrations [partial pressure of O<sub>2</sub> (pO<sub>2</sub>)] in bovine lung microvascular endothelial          cells (BLMVECs) using electron paramagnetic resonance (EPR) oximetry. The measurements were performed in BLMVEC suspensions of a 20-µl volume containing 4,000 cells. The extracellular pO<sub>2</sub>          was measured using a trityl EPR probe [triarylmethyl (TAM), 10 µ<i>M</i>], a tricarboxylate anion radical, that stays exclusively in the extracellular space. The intracellular oxygen was measured          using a pre-internalized particulate spin probe, lithium 5,9,14,18,23,27,32,36-octa-<i>n</i>-butoxy-naphthalocyanine (LiNc-BuO). Because there is a wide discrepancy in the reported values of cellular oxygenation          by and large due to differences in the methods employed, we utilized the dual EPR probe technique to measure the oxygen gradient that apparently exists across the cell membrane. The intra- and extracellular          pO<sub>2</sub> values were 139 ± 2.5 and 157 ± 3.6 mm Hg, respectively, for cells exposed to room air. A fairly smaller gradient of oxygen was observed in cells exposed to 7.5% oxygen (pO<sub>2</sub>          = 57 mm Hg). In summary, this study confirms the feasibility of simultaneous and accurate measurements of intra- and extracellular pO<sub>2</sub> using LiNc-BuO and TAM EPR oximetry probes.      </p>}
+,abstract = {A new technique is described for simultaneous determination of intra- and extracellular oxygen concentrations [partial pressure of O<sub>2</sub> (pO<sub>2</sub>)] in bovine lung microvascular endothelial          cells (BLMVECs) using electron paramagnetic resonance (EPR) oximetry. The measurements were performed in BLMVEC suspensions of a 20-µl volume containing 4,000 cells. The extracellular pO<sub>2</sub>          was measured using a trityl EPR probe [triarylmethyl (TAM), 10 µ<i>M</i>], a tricarboxylate anion radical, that stays exclusively in the extracellular space. The intracellular oxygen was measured          using a pre-internalized particulate spin probe, lithium 5,9,14,18,23,27,32,36-octa-<i>n</i>-butoxy-naphthalocyanine (LiNc-BuO). Because there is a wide discrepancy in the reported values of cellular oxygenation          by and large due to differences in the methods employed, we utilized the dual EPR probe technique to measure the oxygen gradient that apparently exists across the cell membrane. The intra- and extracellular          pO<sub>2</sub> values were 139 ± 2.5 and 157 ± 3.6 mm Hg, respectively, for cells exposed to room air. A fairly smaller gradient of oxygen was observed in cells exposed to 7.5% oxygen (pO<sub>2</sub>          = 57 mm Hg). In summary, this study confirms the feasibility of simultaneous and accurate measurements of intra- and extracellular pO<sub>2</sub> using LiNc-BuO and TAM EPR oximetry probes.}
 }
