fixed and refactored APHA scraper, added test case for HighwireScraper and Disabled AhaJournalsScraper (now handled by Highwire)

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/APHAScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/APHAScraperUnitURLTest1.bib
@@ -1,16 +1,23 @@
-@article{richardson2010timeliness,
-author = {Richardson, Lisa C. and Royalty, Janet and Howe, William and Helsel, William and Kammerer, William and Benard, Vicki B.},
-booktitle = {American Journal of Public Health},
-comment = {doi: 10.2105/AJPH.2009.160184},
-doi = {10.2105/AJPH.2009.160184},
-issn = {00900036},
-journal = {Am J Public Health},
-month = {sep},
-number = {9},
-pages = {1769--1776},
-publisher = {American Public Health Association},
+@article{doi:10.2105/AJPH.2009.160184,
+author = {Lisa C. Richardson and Janet Royalty and William Howe and William Helsel and William Kammerer and Vicki B. Benard},
 title = {Timeliness of Breast Cancer Diagnosis and Initiation of Treatment in the National Breast and Cervical Cancer Early Detection Program, 1996–2005},
-url = {http://dx.doi.org/10.2105/AJPH.2009.160184},
+journal = {American Journal of Public Health},
 volume = {100},
-year = {2010}
+number = {9},
+pages = {1769-1776},
+year = {2010},
+doi = {10.2105/AJPH.2009.160184},
+    note ={PMID: 20019308},
+
+URL = { 
+        https://doi.org/10.2105/AJPH.2009.160184
+    
+},
+eprint = { 
+        https://doi.org/10.2105/AJPH.2009.160184
+    
 }
+,
+    abstract = { Objectives. To determine the effects of program policy changes, we examined service delivery benchmarks for breast cancer screening in the National Breast and Cervical Cancer Early Detection Program (NBCCEDP).Methods. We analyzed NBCCEDP data for women with abnormal mammogram or clinical breast examination (n = 382 416) from which 23 701 cancers were diagnosed. We examined time to diagnosis and treatment for 2 time periods: 1996 to 2000 and 2001 to 2005. We compared median time for diagnostic, treatment initiation, and total intervals with the Kruskal–Wallis test. We calculated adjusted proportions (predicted marginals) with logistic regression to examine diagnosis and treatment within program benchmarks (≤ 60 days) and time from screening to treatment (≤ 120 days).Results. Median diagnostic intervals decreased by 2 days (25 vs 23; P < .001). Median treatment initiation intervals increased by 2 days (12 vs 14; P < .001). Total intervals decreased by 3 days (43 vs 40; P < .001). Women meeting the 60-day benchmark for diagnosis improved the most for women with normal mammograms and abnormal clinical breast examinations from 77\% to 82\%.Conclusions. Women screened by the NBCCEDP received diagnostic follow-up and initiated treatment within preestablished program guidelines. }
+}
+
