--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/APHAScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/APHAScraperUnitURLTest2.bib
@@ -1,16 +1,22 @@
-@article{sievert2010public,
-author = {Sievert, Dawn M. and Wilson, Mark L. and Wilkins, Melinda J. and Gillespie, Brenda W. and Boulton, Matthew L.},
-booktitle = {American Journal of Public Health},
-comment = {doi: 10.2105/AJPH.2009.181958},
-doi = {10.2105/AJPH.2009.181958},
-issn = {00900036},
-journal = {Am J Public Health},
-month = {sep},
-number = {9},
-pages = {1777--1783},
-publisher = {American Public Health Association},
+@article{doi:10.2105/AJPH.2009.181958,
+author = {Dawn M. Sievert and Mark L. Wilson and Melinda J. Wilkins and Brenda W. Gillespie and Matthew L. Boulton},
 title = {Public Health Surveillance for Methicillin-Resistant Staphylococcus aureus: Comparison of Methods for Classifying Health Care– and Community-Associated Infections},
-url = {http://dx.doi.org/10.2105/AJPH.2009.181958},
+journal = {American Journal of Public Health},
 volume = {100},
-year = {2010}
+number = {9},
+pages = {1777-1783},
+year = {2010},
+doi = {10.2105/AJPH.2009.181958},
+    note ={PMID: 20634456},
+
+URL = { 
+        https://doi.org/10.2105/AJPH.2009.181958
+    
+},
+eprint = { 
+        https://doi.org/10.2105/AJPH.2009.181958
+    
+}
+,
+    abstract = { Objectives. We compared 3 methods for classifying methicillin-resistant Staphylococcus aureus (MRSA) infections as health care associated or community associated for use in public health surveillance.Methods. We analyzed data on MRSA infections reported to the Michigan Department of Community Health from October 1, 2004, to December 31, 2005. Patient demographics, risk factors, infection information, and susceptibility were collected for 2151 cases. We classified each case by the health care risk factor, infection-type, and susceptibility pattern methods and compared the results of the 3 methods.Results. Demographic, clinical, and microbiological variables yielded similar health care–associated and community-associated distributions when classified by risk factor and infection type. When 2 methods yielded the same classifications, the overall distribution was similar to classification by 3 methods. No specific combination of 2 methods was superior.Conclusions. MRSA categorization by 2 methods is more accurate than it is by a single method. The health care risk factor and infection-type methods yield comparable classification results. Accuracy is increased by using more variables; however, further research is needed to identify the optimal combination. }
 }
