--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/APHAScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/APHAScraperUnitURLTest3.bib
@@ -10,12 +10,13 @@ doi = {10.1139/o59-099},
     note ={PMID: 13671378},
 
 URL = { 
-        http://dx.doi.org/10.1139/o59-099
+        https://doi.org/10.1139/o59-099
     
 },
 eprint = { 
-        http://dx.doi.org/10.1139/o59-099
+        https://doi.org/10.1139/o59-099
     
 }
-
+,
+    abstract = { Lipid decomposition studies in frozen fish have led to the development of a simple and rapid method for the extraction and purification of lipids from biological materials. The entire procedure can be carried out in approximately 10 minutes; it is efficient, reproducible, and free from deleterious manipulations. The wet tissue is homogenized with a mixture of chloroform and methanol in such proportions that a miscible system is formed with the water in the tissue. Dilution with chloroform and water separates the homogenate into two layers, the chloroform layer containing all the lipids and the methanolic layer containing all the non-lipids. A purified lipid extract is obtained merely by isolating the chloroform layer. The method has been applied to fish muscle and may easily be adapted to use with other tissues. }
 }
