BioMedCentral cleaned up and fixed

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/BioMedCentralScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/BioMedCentralScraperUnitURLTest.bib
@@ -1,15 +1,18 @@
-@Article{17034631,
-AUTHOR = {Sagar, Jayesh and Kumar, Vikas and Shah, Dharmendra and Bhatnagar, Ashok},
-TITLE = {Spontaneous intra-peritoneal bleeding secondary to warfarin, presenting as an acute appendicitis: a case report and review of literature},
-JOURNAL = {BMC Blood Disorders},
-VOLUME = {6},
-YEAR = {2006},
-NUMBER = {1},
-PAGES = {7},
-URL = {http://www.biomedcentral.com/1471-2326/6/7},
-DOI = {10.1186/1471-2326-6-7},
-PubMedID = {17034631},
-ISSN = {1471-2326},
-ABSTRACT = {BACKGROUND:Warfarin is a coumarin anti-coagulant, used widely for the therapeutic and prophylactic anticoagulation. Although, it is considered as a life saving medicine, it is associated with the significant adverse effects including intra-abdominal bleeding, which have been very well documented in literature. However, the presentation of warfarin induced intra-peritoneal bleeding as an acute appendicitis has not been reported in English literature. We report this rare, spontaneous intra-peritoneal bleeding secondary to warfarin therapy, mimicking the signs and symptoms of an acute appendicitis for the first time in English literature.CASE PRESENTATION:A 41 year-old female patient who was on warfarin for prophylaxis following the previous episode of pulmonary embolism, presented to the Casualty with the typical symptoms of an acute appendicitis. During operative intervention, we found it to be the spontaneous intra-peritoneal bleeding secondary to warfarin. The patient recovered well following the operation.CONCLUSION:We recommend the use of the radiological investigations in all the cases of acute abdomen who are on warfarin even if the INR is within the therapeutic range.},
+@Article{Sagar2006,
+author="Sagar, Jayesh
+and Kumar, Vikas
+and Shah, Dharmendra K.
+and Bhatnagar, Ashok",
+title="Spontaneous intra-peritoneal bleeding secondary to warfarin, presenting as an acute appendicitis: a case report and review of literature",
+journal="BMC Hematology",
+year="2006",
+month="Oct",
+day="11",
+volume="6",
+number="1",
+pages="7",
+abstract="Warfarin is a coumarin anti-coagulant, used widely for the therapeutic and prophylactic anticoagulation. Although, it is considered as a life saving medicine, it is associated with the significant adverse effects including intra-abdominal bleeding, which have been very well documented in literature. However, the presentation of warfarin induced intra-peritoneal bleeding as an acute appendicitis has not been reported in English literature. We report this rare, spontaneous intra-peritoneal bleeding secondary to warfarin therapy, mimicking the signs and symptoms of an acute appendicitis for the first time in English literature.",
+issn="2052-1839",
+doi="10.1186/1471-2326-6-7",
+url="https://doi.org/10.1186/1471-2326-6-7"
 }
-
