--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CatInistScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CatInistScraperUnitURLTest.bib
@@ -1,10 +1,13 @@
-@book{anastassopoulos1995clustering,
-abstract = {Partitional clustering analysis is used for the interpretation of acoustic emission (AE) signals from glass fiber/ epoxy composite specimens in order to overcome some of the difficulties and uncertainties encountered either with conventional AE or with supervised pattern recognition analysis of AE data. Two different clustering methods are examined and procedures for numerical validation of the results are investigated. Comparison of clustering results with optical microscopy is used for further validation of the resulting partitions, while the initiation and growth of the different failure mechanisms is successfully characterized by plotting the cumulative events of each of the resulting classes. The proposed method highlights the potential and effectiveness of AE along with data clustering analysis as a powerful stand-alone nondestructive testing technique for the discrimination between various failure mechanisms.},
-address = {Acoustic Emission Group},
-author = {ANASTASSOPOULOS and  and A. A. and PHILIPPIDIS and  and T. P.},
-howpublished = {Los Angeles, CA, ETATS-UNIS},
-keywords = {Acoustic emission},
-series = {1-2},
-title = {Clustering methodology for the evaluation of acoustic emission from composites},
-year = {1995}
+@article{,
+author = "Lu P.-L. and Siu L.K. and Huang L.-Y. and Lian S.-T. and Chang K. and Lin C.-L. and Hwang I.-J. and Chiang W.-G. and Chen Y.-H. and Lin S.-F.",
+title = "How carbapenem-resistant Acinetobacter spp. established in a newly constructed hospital",
+journal = "International Journal of Antimicrobial Agents",
+year = "2008",
+volume = "31",
+number = "5",
+pages = "463--466",
+issn = "0924-8579",
+doi = "10.1016/j.ijantimicag.2008.01.019",
+pmid = "18359613",
+url = "http://www.refdoc.fr/Detailnotice?idarticle=3620772"
 }
