--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProjectEuclidScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProjectEuclidScraperUnitURLTest.bib
@@ -8,7 +8,10 @@ number = "1",
 pages = "1--67",
 publisher = "The Institute of Mathematical Statistics",
 title = "The Future of Data Analysis",
-url = "http://dx.doi.org/10.1214/aoms/1177704711",
+url = "https://doi.org/10.1214/aoms/1177704711",
 volume = "33",
 year = "1962"
 }
+
+
+
