dropdowns now working correctly

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -296,6 +296,8 @@ captcha = captcha
 
 change = change
 
+clickToRemove = Click to remove
+
 clipboard.delete           = delete all your posts from the clipboard
 clipboard.edit.tags        = edit the tags of all own posts on your clipboard
 clipboard.editTags         = edit tags
