--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -295,6 +295,8 @@ captcha = Captcha
 
 change = &auml;ndern
 
+clickToRemove = Klicken, um zu l\u00F6schen
+
 clipboard.delete           = alle eigenen Eintr\u00E4ge aus der Ablage entfernen
 clipboard.edit.tags        = die Tags aller eigenen Eintr\u00E4ge in der Ablage bearbeiten
 clipboard.editTags         = Tags bearbeiten
