--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -287,6 +287,8 @@ captcha = captcha
 
 change = \u0438\u0437\u043C\u0435\u043D\u0438\u0442\u044C
 
+clickToRemove = 
+
 close = \u0437\u0430\u043A\u0440\u044B\u0442\u044C
 
 community = \u0441\u043E\u043E\u0431\u0449\u0435\u0441\u0442\u0432\u043E
