--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/degruyter/DeGruyterScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/degruyter/DeGruyterScraperUnitURLTest3.bib
@@ -1,6 +1,7 @@
 @book{evamaria2017studiolo,
 author = {Seng Eva-Maria and Keil Reinhard and Oevel Gudrun},
-isbn = {9783110364644},
+doi = {10.1515/9783110364842},
+isbn = {9783110364842},
 title = {studiolo, Kooperative Forschungsumgebungen in den eHumanities},
 url = {https://www.degruyter.com/view/product/429811},
 year = {2017}
